# ChangeLog for dev-db/ctdb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/ctdb/ChangeLog,v 1.8 2009/10/24 11:18:30 klausman Exp $

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org> ctdb-1.0.88.ebuild:
  Keyworded on alpha, bug #285952

*ctdb-1.0.88 (09 Oct 2009)

  09 Oct 2009; Patrick Lauer <patrick@gentoo.org> +ctdb-1.0.88.ebuild,
  +files/ctdb-41.httpd_gentoo.patch, +files/ctdb-50.samba_gentoo.patch,
  +files/ctdb.initd, +files/ctdb-functions.patch:
  Bump to 1.0.88, thanks to John Simmonds for the patches and modified
  ebuild. Closes #278695

  03 Oct 2009; Markus Meier <maekke@gentoo.org> ctdb-1.0.73.ebuild:
  add ~arm, bug #285952

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> ctdb-1.0.73.ebuild:
  Marked ~hppa (bug #285952).

  26 Sep 2009; Brent Baude <ranger@gentoo.org> ctdb-1.0.73.ebuild:
  Marking ctdb-1.0.73 ~ppc64 for bug 285952

  26 Jun 2009; Patrick Lauer <patrick@gentoo.org> ctdb-1.0.73.ebuild:
  Adding ~x86 keyword

*ctdb-1.0.73 (09 Mar 2009)

  09 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> +ctdb-1.0.73.ebuild:
  Added release version of ctdb

*ctdb-9999 (26 Jul 2008)

  26 Jul 2008; Tiziano Müller <dev-zero@gentoo.org>
  +files/autoconf-2.62-fix.patch, +metadata.xml, +ctdb-9999.ebuild:
  Initial commit. Ebuild written by me.
